# beETLe

./: Dockerfile  README.md  app.py  buildspec.yml  pyproject.toml
devops/: registry_tag.txt
